--- a/localisation/simp_chinese/LFB_character_l_simp_chinese.yml
+++ b/localisation/simp_chinese/LFB_character_l_simp_chinese.yml
@@ -39,7 +39,6 @@
   COX_Han_Xianchu: "韩先楚"
   COX_Chang_Qiankun: "常乾坤"
 
-
 #西北局
   #Liu_Shaoqi
   XBJ_Liu_Shaoqi_desc: "在最低谷处为革命找寻生机，在最绝望的时候为全民族觅得希望，这便是刘少奇坚持至今的，属于共产党人的“党性”。他将自己的青春献给了大革命，将热血挥洒在抗日的战场，而他憔悴的晚年，则为了党的存续穷尽了一切——当战败已经注定之时，党不得不放弃了延安根据地，展开了前往西南的新长征，刘少奇自愿留在延安，维系共产党残破的地下党组织。\n\n陕北的斗争一日比一日艰苦，日军扫荡的压力与日俱增，他们的身前匍匐着汉奸党羽，他们手中拎着禁锢群众的锁链，党越来越无法在陕北辗转腾挪……在最危险的几个年份，党被分割包围在黄河两岸。为了保存火种，刘少奇只能率领残破的党向西北撤退……\n\n共产党的西行相当顺利，在顺利通过了山西与青海的军阀控制区之后，刘少奇幸运地在新疆找到了党组织。尽管盛世才政府愿意给共产党提供一席之地，但刘少奇很清楚军阀们首鼠两端的做派，所以当不可避免的背叛到来时，共产党已经做足了准备，最大程度地减少了损失。\n\n刘少奇经历过党最黑暗的时光，竭尽全力地拯救了危难中的党，这在他性格中留下了不可磨灭的印记。比起积极地发动群众，他更相信缜密的谋划与情报的运用，尽管采用更加实用主义的立场，但没有人能怀疑他对革命的忠诚。"
@@ -57,7 +56,7 @@
 #建设兵团
   Maimaiti_Iminov: "买买提伊敏·伊敏诺夫"
   XPC_Maimaiti_Iminov_desc: "买买提伊敏·伊敏诺夫，新疆阿图什人，维吾尔族。参加了新疆反帝会并任秘书工作。抗日战争时期，在乌鲁木齐水利专科学校学习毕业后，任新疆伪省建设厅水利技术员、助理工程师，参加革命后担任新疆革命游击队排长、连长，伊宁革命政府农业局副局长。\n买买提伊敏无论是作为军人，还是作为一个技术人员，都可以担任垦荒区目前的任务，应该也能做好垦荒区的民族团结工作……"
-#西南局
+#西南中央
   Deng_Xiaoping: "邓小平"
   Liu_Bocheng: "刘伯承"
   Hua_Guofeng: "华国锋"
@@ -65,24 +64,22 @@
   Li_Da: "李达"
 
 #东突
-
-
-
-#中亚
   Elihan_Tore: "艾力汗·吐烈"
-
 
 #马家军
   QIN_Ma_Bufang: "马步芳"
   POLITICS_MA_BUFANG_DESC: "有人说，西北马家共尊真主，故得长幼和睦，尊卑有序；西北人民唯奉安拉，故得战乱鲜少，生活富足。但此刻坐在王座上的马步芳十分清楚，抛去真主圣言的粉饰，西北诸军阀的本质与中原并无不同，都是披着人皮的野兽。\n出卖国家，背叛人民，甚至背叛自己的至亲——就连马步芳自己，都伙同南京政府，与马步荣一道逼迫其父马麟将权柄交出，才得以执掌青海。但马家确实胜于中原军阀的一点是——每当大敌当前，信众们便会爆发出惊人的团结，无论分歧几何，他们也大体上服从领导者的决定，自清末以来便一贯于此。\n无论面对的是共产党还是国民党，是汉人还是日寇，马步芳都小心地把控着西北的航向。觉察日军不愿劳师远征青海，马步芳便明智地保存实力，将重庆的电报每每搁置一旁。待到战局明朗之际，他果断改换阵营，令西北赶上了战后经济复苏的快车，开创了“塞上江南”的繁荣神话。\n时过境迁，但马步芳的统治仍稳如泰山，放眼四方，日资仍争抢着涌入，而南京政府也无力对西北自治做出干涉。就连西藏的喇嘛，也自觉避开马家军的锋芒。但伟大的“西北王”如今已步入其暮年，多年来放荡奢靡的生活拖垮了他的身子，好在曾环绕膝下的孩子们已经长成，终有一日，他们必将从自己手中接过这雄厚的遗产，无论早晚…无论用什么手段……"
 
  #蒙人阵
-  MEN_zedengbaer: "尤睦佳·泽登巴尔"
-  MEN_zedengbaer_desc: "在参加政治工作以前，泽登巴尔曾经是一名经济学者。他曾在苏联伊尔库茨克财经学院学习。回国后，他很快就成为了蒙古人民共和国的财政部副部长和中央委员。作为乔巴山的副手，泽登巴尔一直受到蒙古人民革命党和莫斯科的青睐，直到二战的开始。\n\n起初，没有人在意战争的爆发，毕竟强大的苏联总是战无不胜的。但是事情的发展超出了所有人的预料。随着苏联和中国的倒塌，蒙古不得不直接面对日本帝国。在混乱之中，泽登巴尔带领蒙古军民离开了乌兰巴托。在唐努图瓦，他们遇到了同样被轴心国赶到这里的华西列夫斯基，两点黑暗中的火星聚为了更大的火苗。\n\n从此蒙古人民阵线以唐努图瓦作为根据地，在西蒙继续反抗日本帝国主义与其走狗——德王。尽管有人革委支持，但泽登巴尔依旧认为共荣圈是不可战胜的。如今，十几年过去，泽登巴尔曾经的黑发已经变得花白，蒙古的未来也变得更加扑朔迷离。"
-  POLITICS_youmujiazedengbaer_DESC: "在参加政治工作以前，泽登巴尔曾经是一名经济学者。他曾在苏联伊尔库茨克财经学院学习。回国后，他很快就成为了蒙古人民共和国的财政部副部长和中央委员。作为乔巴山的副手，泽登巴尔一直受到蒙古人民革命党和莫斯科的青睐，直到二战的开始。\n\n起初，没有人在意战争的爆发，毕竟强大的苏联总是战无不胜的。但是事情的发展超出了所有人的预料。随着苏联和中国的倒塌，蒙古不得不直接面对日本帝国。在混乱之中，泽登巴尔带领蒙古军民离开了乌兰巴托。在唐努图瓦，他们遇到了同样被轴心国赶到这里的华西列夫斯基，两点黑暗中的火星聚为了更大的火苗。\n\n从此蒙古人民阵线以唐努图瓦作为根据地，在西蒙继续反抗日本帝国主义与其走狗——德王。尽管有人革委支持，但泽登巴尔依旧认为共荣圈是不可战胜的。如今，十几年过去，泽登巴尔曾经的黑发已经变得花白，蒙古的未来也变得更加扑朔迷离。"
-  MEN_batedaoerji: "巴特·道尔吉"
-  MEN_batedaoerji_for_desc: "巴特道尔吉原来是个牧民，后来在30年代成为了蒙古人民军的一员。他曾经以师长的身份，参加了自诺门罕战役以来的所有对日本帝国主义的战斗。他见证了蒙古人民共和国如何被消灭，以及，关东军是如何把旭日旗插到乌兰巴托的苏赫巴托广场上的。\n\n乌兰巴托失陷之后，蒙军开始大规模撤退。巴特道尔吉虽只是一名中级军官，但他成功掩护了主力蒙军的撤退。疯狂的日伪军让巴特道尔吉的士兵们损失惨重，但万幸的是人民军和政府的主干人员已被成功转移。这一战之后，巴特道尔吉进入了人革委开设的临时军事学院。\n\n如今，巴特道尔吉已经成为了人民军中年轻势力的代表，他已经等不及要向日本人和蒙古伪军报仇了。"
-  MEN_zhamiyang: "扎米扬·勒哈格瓦苏伦"
-  MEN_zhamiyang_desc: "扎米扬·勒哈格瓦苏伦于1912年出生于一个军官家庭，1932年，二十岁的勒哈格瓦苏伦应征入伍，随后被分配到第十五骑兵师。1935年，勒哈格瓦苏伦被选中参加优秀军官培养计划，随后他的晋升速度可以用“坐火箭”来形容。1939年7月，勒哈格瓦苏伦以第一苏蒙集团军的蒙古骑兵部分的指挥官的身份，参加了诺门罕战役，而他的顶头上司则是朱可夫。 \n\n在诺门罕战役中，勒哈格瓦苏伦首次见到了机械化骑兵集群的威力，并且暗暗下定决心，要为蒙古打造自己的机械化骑兵部队。但苏联和中国的战败，让勒哈格瓦苏伦不得不收起他的梦想，转而逃命。不过，如果有一天蒙古被解放，或许勒哈格瓦苏伦还有机会实现他的梦想。"
-  MEN_gonggeer: "沙格达里·贡戈尔"
-  MEN_gonggeer_desc: "沙戈达里·贡戈尔于1912年出生在一个牧民家庭，1927年，贡戈尔成为蒙古骑兵军的一名士兵，这支部队驻扎在蒙古人民共和国和伪满洲国的边境。1936年1月28日晚7点半，在哨所执勤的贡戈尔遭到了十几名日军骑兵的袭击，但是他没有退缩，而是单枪匹马与敌人鏖战了两个小时。因为这次英勇的战斗经历，贡戈尔在同月被授予“共和国英雄”的荣誉称号。贡戈尔在1939年以装甲旅旅长的身份参加了诺门罕战役。作为蒙军新锐的装甲力量，贡戈尔麾下的装甲旅被寄予厚望。\n\n和其他高级将领不同，贡戈尔并不留念军队和政治，反而向往着解甲归田的生活，毕竟，枪炮无法使蒙古富裕。他曾经计划好等战争结束后尽快复员，然而盟国与邻国的战败让他不得不推迟自己的计划——他将继续战斗下去，直至蒙古解放。"
+MEA_Zolbingijn_Shizhee: "卓勒宾·希耶"
+POLITICS_Zolbingijn_Shizhee_DESC: "（占位）蒙古覆灭后从苏联归国参加游击运动的原农村派（左派）成员。"
+MEA_Dashijn_Damba: "达西·丹巴"
+MEA_Dashijn_Damba_hog_desc: "§Y人民委员会主席§!\n§Y民族共产主义§!\n------------\n（占位）蒙古溃败后本地抵抗势力，负责与中国接触。"
+MEA_Batyn_Dorzh: "巴特·道尔吉"
+MEA_Batyn_Dorzh_for_desc: "§Y外交部长§!\n§Y民族共产主义§!\n------------\n巴特道尔吉原来是个牧民，后来在30年代成为了蒙古人民军的一员。他曾经以师长的身份，参加了自诺门罕战役以来的所有对日本帝国主义的战斗。他见证了蒙古人民共和国如何被消灭，以及，关东军是如何把旭日旗插到乌兰巴托的苏赫巴托广场上的。\n\n乌兰巴托失陷之后，蒙军开始大规模撤退。巴特道尔吉虽只是一名中级军官，但他成功掩护了主力蒙军的撤退。疯狂的日伪军让巴特道尔吉的士兵们损失惨重，但万幸的是人民军和政府的主干人员已被成功转移。这一战之后，巴特道尔吉进入了人革委开设的临时军事学院。\n\n如今，巴特道尔吉已经成为了人民军中年轻势力的代表，他已经等不及要向日本人和蒙古伪军报仇了。"
+MEA_Oleijtijn_Badrakh: "奥勒扎·巴德拉克"
+MEA_Oleijtijn_Badrakh_eco_desc: "§Y经济部长§!\n§Y民族共产主义§!\n------------\n（占位）蒙古覆灭后从苏联归国参加游击运动的原农村派（左派）成员。"
+MEA_Zhamyangijn_Lkhagvasuren: "扎米扬·勒哈格瓦苏伦"
+MEA_Zhamyangijn_Lkhagvasuren_sec_desc: "§Y国防部长§!\n§Y民族共产主义§!\n------------\n扎米扬·勒哈格瓦苏伦于1912年出生于一个军官家庭，1932年，二十岁的勒哈格瓦苏伦应征入伍，随后被分配到第十五骑兵师。1935年，勒哈格瓦苏伦被选中参加优秀军官培养计划，随后他的晋升速度可以用“坐火箭”来形容。1939年7月，勒哈格瓦苏伦以第一苏蒙集团军的蒙古骑兵部分的指挥官的身份，参加了诺门罕战役，而他的顶头上司则是朱可夫。 \n\n在诺门罕战役中，勒哈格瓦苏伦首次见到了机械化骑兵集群的威力，并且暗暗下定决心，要为蒙古打造自己的机械化骑兵部队。但苏联和中国的战败，让勒哈格瓦苏伦不得不收起他的梦想，转而逃命。不过，如果有一天蒙古被解放，或许勒哈格瓦苏伦还有机会实现他的梦想。"
+MEA_Shagdarijn_Gungaar: "沙格达里·贡嘎尔"
+MEA_Yumzhaagijn_Tsedenbal: "尤睦佳·泽登巴尔"
