--- a/localisation/simp_chinese/LFB_countries_l_simp_chinese.yml
+++ b/localisation/simp_chinese/LFB_countries_l_simp_chinese.yml
@@ -33,19 +33,6 @@ KOR_LFB_IF: "朝鲜"
 KOR_LFB_IF_DEF: "朝鲜"
 KOR_LFB_IF_ADJ: "朝鲜"
 
-QIN_NIQ: "西北行政公署"
-QIN_NIQ_DEF:"西北行政公署"
-QIN_NIQ_ADJ:"西北行政公署"
-QIN_MJY: "西北国民军"
-QIN_MJY_DEF:"西北国民军"
-QIN_MJY_ADJ:"西北国民军"
-XIK_KIX: "西康省"
-XIK_KIX_DEF:"西康省"
-XIK_KIX_ADJ:"西康"
-
-XIN: "新疆执政府"
-XIN_DEF:"新疆执政府"
-XIN_ADJ:"新疆"
 XIN_socialist_party: "新疆保卫和平民主同盟"
 XIN_socialist_party_long: "新疆保卫和平民主同盟"
 XIN_despotism_party: "六大政策党"
@@ -59,7 +46,7 @@ XBJ_ADJ: "中共西北局"
 XBJ_QGNPG: "青甘宁革命根据地"
 XBJ_QGNPG_DEF: "青甘宁革命根据地"
 XBJ_QGNPG_ADJ: "青甘宁"
-XBJ_despotism_party: "宁马"
+XBJ_despotism_party: "宁夏马家军"
 XBJ_despotism_party_long: "宁夏马家军"
 XBJ_NRA: "国民革命军西北新一师"
 XBJ_NRA_long: "国民革命军西北新编第一师"
@@ -71,7 +58,7 @@ XBJ_communist_party_long: "中国共产党中央委员会西北局"
 HNA: "海南军政监"
 HNA_DEF: "海南军政监"
 HNA_ADJ: "海南"
-HNA_futianliangsan: "福田良三"
+HNA_Fukuda_Ryouzou: "福田良三"
 HNA_ultranationalism_party: "华南方面军"
 HNA_despotism_party: "帝国海南军政部"
 HNA_liberalism_party: "中国民主同盟"
@@ -92,6 +79,13 @@ XPC_paternalism_party: "伊犁建设兵团"
 XPC_paternalism_party_long: "伊犁建设兵团"
 XPC_communist_party: "中共中央新疆局"
 XPC_communist_party_long: "中国共产党中央委员会新疆局"
+
+MEA: "蒙古人民共和国"
+MEA_DEF: "蒙古人民共和国"
+MEA_communist_1_party: "蒙古人民革命党"
+MEA_communist_1_party_long: "蒙古人民革命党"
+MEA_communist_party: "蒙古人民革命党"
+MEA_communist_party_long: "蒙古人民革命党"
 
 Construction_Corps:0 "建设兵团"
 pup_difangju:0 "地方局"
