--- a/localisation/simp_chinese/COX_GAW_GUI_l_simp_chinese.yml
+++ b/localisation/simp_chinese/COX_GAW_GUI_l_simp_chinese.yml
@@ -1,10 +1,8 @@
 ﻿l_simp_chinese:
 TNO_LFB_huabei_dec: "华北攻势"
 
-
 LFB_GAW_GUI.2.a.tt: "§G日本投降了,我们胜利了！§!"
 LFB_GAW_GUI.1.a.tt: "§Y满洲地区将会分治§!,§G华北地区将会根据现状进行分配§!"
-
 
 DMN: "西满洲缓冲区"
 DMN_ADJ: "西满洲缓冲区"
@@ -13,14 +11,13 @@ DMN_fascism_party: "满洲国各地残余机构"
 DMN_fascism_party_long: "满洲国各地残余机构"
 DMN_paternalism_party: "满洲重建委员会"
 DMN_paternalism_party_long: "满洲重建委员会"
-DMN_communist_party: "中共东北局"
-DMN_communist_party_long: "中共中央东北局"
+DMN_communist_party: "中共中央东北局"
+DMN_communist_party_long: "中国共产党中央委员会东北局"
 DMN_pujie: "爱新觉罗·溥杰"
 KOR_rebuild_communist_party: "朝鲜共产党"
 KOR_rebuild_communist_party_long: "朝鲜共产党"
 COX_idea_huabei_17: "作鸟兽散"
 COX_idea_huabei_18: "往日之影"
-
 
 LFB_GAW_GUI.102.t: "黄河明珠之殇"
 LFB_GAW_GUI.102.d: "兰州市，简称“兰”“皋”，古称金城。地处西北要地，兰州自秦朝以来已有两千多年的建城史，自古就是“联络四域、襟带万里”的交通枢纽和军事要塞。日本远征军占领这里后，辻政信更敏锐地觉察到了此地的战略价值，不远万里从满洲拉来钢筋水泥，就地征调民夫，将兰州城内外围成了名副其实的铁桶。\n\n但无论怎样牢靠的工事，都有其弱点。随着战争的旷日持久，辻政信越来越难以给远征军弄来补给与兵员，远征军早已疲态尽显，无法再像之前那样对西宁城保持压力。遥遥无期的战争消磨着帝国的耐心，每周，辻政信都会收到本部敦促他撤离的电报，但皇国之魂仍促使他继续战斗，不到殒命沙场，武士总会持刀屹立，期盼着事态有所转机。\n\n游击队的活动极大的限制了远征军在乡野的活动，兵力不足，补给短缺，辻政信只能命令士兵固守几个大的聚居点。这使得他们对红军的攻势几乎没有防备，几乎在数天之内，红军就拔除了挡在面前的数个据点，完全将兰州包围。\n\n直到此刻，辻政信仍做着他的春秋大梦——只要兰州的坚墙挫败了红军的锐气，远征军就能趁机反攻，一举粉碎西北的抵抗，他就能衣锦还乡，继续当帝国的英雄……\n\n于是惨烈的攻城战开始了，担心破坏兰州城的古迹，更害怕伤及无辜，红军并未调集重炮攻城，只是在山炮与重机枪的支援下，分批次地对城头发起了冲锋。在付出了一些伤亡后，红军拔掉了城外的日军阵地，迫使他们入城固守。等待着红军的，是更加残酷的战斗——坚固的街垒遍布昔日四通八达的街巷，高一些的民居中都精心布设着火力点，最为关键的是，日军根本不在乎民众的死活，城中的居民完全没有得到疏散，而是在刺刀的逼迫下，献出最后一口存粮，流干最后一滴汗，再被当作肉盾，迫使红军付出大量的牺牲，一栋接一栋地进行扫荡……\n\n城中激战持续了数周，待到尘埃落定之时，兰州城早已伤痕累累。好似战争造成的破坏还不够，在撤退前，日军的后卫在城中大肆纵火，火势一度蔓延至数个城区…….\n\n将日本逐出兰州的战役中，中国军民付出了难以计数的伤亡……"
