--- a/localisation/simp_chinese/replace/TNO_Gansu_l_simp_chinese.yml
+++ b/localisation/simp_chinese/replace/TNO_Gansu_l_simp_chinese.yml
@@ -26,5 +26,5 @@
  GAN.1002.desc: "今日，驻扎于兰州的帝国陆军西北方面军军部宣布对西北地区的军事占领正式结束，在此之前，日军已经分批撤出了中国西北地区并将当地防务转交给了中华民国国军。\n\n日本方面表示，撤军这一行动基于泛亚理念，是对中国主权的尊重，同时也是日方对中国盟友军事力量的认可。\n\n但也有人认为，实际情况是日军已无力应对西北地区不断恶化的局势，只想从西北地区的治安战泥潭中脱身，撤军这一行动即是其战略企图的彻底破产的标志。而现在，南京方面将独自面对日军留下的烂摊子，失去对西北地区的掌控很可能只是时间问题。"
  GAN.1002.a: "不论是鬼子还是汉奸，我们一样打！"
  GAN.1002.b: "战略性撤退，无伤大雅。"
- GAN.1002.c: "他们的意思是让我们独自面对赤匪？！"
+ GAN.1002.c: "他妈的日本佬，还是得我们自己来！"
  GAN.1002.d: "东亚上空的旭日又暗了一分。"
