城市介绍与越南微改

--- a/localisation/simp_chinese/replace/LFB_countries_l_simp_chinese.yml
+++ b/localisation/simp_chinese/replace/LFB_countries_l_simp_chinese.yml
@@ -122,6 +122,13 @@ HNA_despotism_party: "帝国海南军政部"
 HNA_liberalism_party: "中国民主同盟"
 HNA_communist_party: "琼崖讨逆纵队"
 
+VIC_communist_party: "东洋共产党"
+VIC_communist_party_long: "东洋共产党"
+VIC_reform_communist_party: "越南劳动党"
+VIC_reform_communist_party_long: "越南劳动党"
+VIC_unified_communist_party: "越南共产党"
+VIC_unified_communist_party_long: "越南共产党"
+
 #IF
 MEA: "蒙古人民共和国"
 MEA_DEF: "蒙古人民共和国"
