--- a/localisation/simp_chinese/replace/LFB_character_l_simp_chinese.yml
+++ b/localisation/simp_chinese/replace/LFB_character_l_simp_chinese.yml
@@ -72,6 +72,7 @@
 #QIN_Ma_Bufang: "马步芳"//勿念他归
 #POLITICS_MA_BUFANG_DESC: "有人说，西北马家共尊真主，故得长幼和睦，尊卑有序；西北人民唯奉安拉，故得战乱鲜少，生活富足。但此刻坐在王座上的马步芳十分清楚，抛去真主圣言的粉饰，西北诸军阀的本质与中原并无不同，都是披着人皮的野兽。\n出卖国家，背叛人民，甚至背叛自己的至亲——就连马步芳自己，都伙同南京政府，与马步荣一道逼迫其父马麟将权柄交出，才得以执掌青海。但马家确实胜于中原军阀的一点是——每当大敌当前，信众们便会爆发出惊人的团结，无论分歧几何，他们也大体上服从领导者的决定，自清末以来便一贯于此。\n无论面对的是共产党还是国民党，是汉人还是日寇，马步芳都小心地把控着西北的航向。觉察日军不愿劳师远征青海，马步芳便明智地保存实力，将重庆的电报每每搁置一旁。待到战局明朗之际，他果断改换阵营，令西北赶上了战后经济复苏的快车，开创了“塞上江南”的繁荣神话。\n时过境迁，但马步芳的统治仍稳如泰山，放眼四方，日资仍争抢着涌入，而南京政府也无力对西北自治做出干涉。就连西藏的喇嘛，也自觉避开马家军的锋芒。但伟大的“西北王”如今已步入其暮年，多年来放荡奢靡的生活拖垮了他的身子，好在曾环绕膝下的孩子们已经长成，终有一日，他们必将从自己手中接过这雄厚的遗产，无论早晚…无论用什么手段……"
  QIN_Ma_Ji_yuan: "马继援 "
+POLITICS_MA_JIYUAN_LFB_DESC: "一座座窑洞被翻了个底朝天，战士连同平民的尸体一同散落在不知名的山岗之中；孩子的脸冻结在面目狰狞的最后一刻，哭喊的声音同毒气一同弥散直至消失；制服残破不全的溃兵赤脚拖着血迹四散奔逃。然后，就在这些早已被他习惯的声音与画面之中，一发子弹径直穿透了父亲的头颅，那副似乎永远都不会慌乱的面庞顷刻面目全非……\n\n然后，马继援又一次惊醒了。\n\n马继援时常思忖这一切是否是造物者的报应，但每每想到这里，他又会为这种想法的残酷深深感到不寒而栗。三十年前，他的父亲马步芳是如何无动于衷地注视着那些被自己麾下刺刀挑开的胸膛？而今，数倍残忍于马家军当年所作的恶正平等地降临在这片黄沙上阿丹所有的儿女身上。从当年的说一不二到如今的颠沛流离，似乎胜利在这片土地上只会眷顾与芸芸众生为敌的那一方。\n\n于是，德国和广东最新式的机械同西北的风沙一同作响起来了；于是，战士们的步枪与刺刀在一次次更新换代中越发锃亮了；于是，在对南京、北平或是日耳曼尼亚的蹒跚的模仿中，一栋栋楼房在时不时点缀几道航迹云的蓝天中立起来了。\n\n但是这一切永远不会结束。父亲逐寸褪淡的面容和机枪中无数人的最后一声哭喊永远不会离开马继援的梦境，因为他知道，在他所不能及的地方，永远都有自己的同胞正在魔鬼的爪牙枪下失掉自己的父亲，永远都有战士不自量力为着崇高的信念迎接那没有悬念的结局，像狗一般没有尊严地倒在机枪的火舌下。\n\n但他知道，终有一日，这场延续了三十年有余的暗无天日的噩梦会迎来光明普照的结局。\n\n§R 终有一日。§!"
  QIN_Chen_Cheng: "陈诚"
  POLITICS_CHEN_CHENG_DESC:0 ""
  QIN_Chen_Lifu: "陈立夫"
@@ -115,3 +116,5 @@ MEA_Zhamyangijn_Lkhagvasuren: "扎米扬·勒哈格瓦苏伦"
 MEA_Zhamyangijn_Lkhagvasuren_sec_desc: "§Y国防部长§!\n§Y民族共产主义§!\n------------\n扎米扬·勒哈格瓦苏伦于1912年出生于一个军官家庭，1932年，二十岁的勒哈格瓦苏伦应征入伍，随后被分配到第十五骑兵师。1935年，勒哈格瓦苏伦被选中参加优秀军官培养计划，随后他的晋升速度可以用“坐火箭”来形容。1939年7月，勒哈格瓦苏伦以第一苏蒙集团军的蒙古骑兵部分的指挥官的身份，参加了诺门罕战役，而他的顶头上司则是朱可夫。 \n\n在诺门罕战役中，勒哈格瓦苏伦首次见到了机械化骑兵集群的威力，并且暗暗下定决心，要为蒙古打造自己的机械化骑兵部队。但苏联和中国的战败，让勒哈格瓦苏伦不得不收起他的梦想，转而逃命。不过，如果有一天蒙古被解放，或许勒哈格瓦苏伦还有机会实现他的梦想。"
 MEA_Shagdarijn_Gungaar: "沙格达里·贡嘎尔"
 MEA_Yumzhaagijn_Tsedenbal: "尤睦佳·泽登巴尔"
+
+VIC_Ho_ChiMinh: "胡志明 "
