跟据新版本ROC成立后的socialist党派名称微调联合政府socialist党派名称

--- a/localisation/simp_chinese/COX_united_goverment_l_simp_chinese.yml
+++ b/localisation/simp_chinese/COX_united_goverment_l_simp_chinese.yml
@@ -56,8 +56,8 @@
  COX_union_liberalism_party_long: "中国民主同盟"
  COX_union_progressivism_party: "民盟 - 农工民主党"
  COX_union_progressivism_party_long: "中国民主同盟 - 中国农工民主党"
- COX_union_socialist_party: "国民党 - 革命委员会"
- COX_union_socialist_party_long: "中国国民党革命委员会"
+ COX_union_socialist_party: "民盟 - 第三党"
+ COX_union_socialist_party_long: "中国民主同盟 - 中国国民党革命委员会/中国民主革命同盟/三民主义同志联合会"
  COX_union_communist_party: "中国共产党"
  COX_union_communist_party_long: "中国共产党"
  COX_National_Assembly: "国民大会"
