--- a/localisation/simp_chinese/XNJ_decisions_l_simp_chinese.yml
+++ b/localisation/simp_chinese/XNJ_decisions_l_simp_chinese.yml
@@ -12,3 +12,7 @@ Zhou_Enlai_clothes_8: "今天最高兴了"
 Zhou_Enlai_clothes_9: "你们不跟我走，我去闽南找冷烤馒头"
 Zhou_Enlai_clothes_10: "赛博完人会梦到大火飞起来吗？"
 Zhou_Enlai_clothes_11: "很酷，不说话"
+Zhou_Enlai_clothes_12: "慈祥"
+Zhou_Enlai_clothes_13: "蚌埠住了"
+Zhou_Enlai_clothes_14: "再年轻一点试试？"
+Zhou_Enlai_clothes_15: "我很不爽，叫小高来"
