--- a/localisation/simp_chinese/replace/LFB_countries_l_simp_chinese.yml
+++ b/localisation/simp_chinese/replace/LFB_countries_l_simp_chinese.yml
@@ -11,27 +11,27 @@ COX_XBJ_DEF: "西北抗日民主政府"
 COX_XBJ_ADJ: "西北抗日民主政府"
 COX_PRC: "中华人民共和国"
 COX_PRC_DEF: "中华人民共和国"
-COX_PRC_ADJ: "中华人民共和国"
+COX_PRC_ADJ: "中国"
 COX_SOV: "中华苏维埃共和国"
 COX_SOV_DEF: "中华苏维埃共和国"
-COX_SOV_ADJ: "中华苏维埃共和国"
+COX_SOV_ADJ: "中华苏维埃"
 COX_despotism_party: "中国共产党紧急委员会"
 COX_despotism_party_long: "中国共产党紧急委员会"
 COX_socialist_party: "新疆保卫和平民主同盟"
-COX_socialist_party_long: "新疆保卫和平民主同盟（Peace and Democracy League of XinJiang）"
+COX_socialist_party_long: "新疆保卫和平民主同盟(Peace and Democracy League of XinJiang)"
 COX_communist_3_party: "中共中央新疆局"
-COX_communist_3_party_long: "中国共产党中央委员会新疆局（CPCC XinJiang Bureau）"
+COX_communist_3_party_long: "中共中央新疆局(CPCC XinJiang Bureau)"
 COX_communist_party: "中国共产党 - 八十八旅支部"
 COX_communist_party_long: "中国共产党 - 八十八旅支部"
 COX_communist_party_XIN: "中共中央新疆局"
-COX_communist_party_XIN_long: "中国共产党中央委员会新疆局"
+COX_communist_party_XIN_long: "中共中央新疆局"
 COX_despotism_democracy_party: "抗日军政委员会"
-COX_despotism_democracy_party_long: "抗日军政委员会（Anti-Japanese Military and Political Committee）"
+COX_despotism_democracy_party_long: "抗日军政委员会(Anti-Japanese Military and Political Committee)"
 COX_communist_party_PRC: "中国共产党"
 COX_communist_party_PRC_long: "中国共产党"
 
 XBJ: "中共中央西北局"
-XBJ_DEF: "中国共产党中央委员会西北局"
+XBJ_DEF: "中共中央西北局"
 XBJ_ADJ: "中共西北局"
 XBJ_QGNPG: "青甘宁革命根据地"
 XBJ_QGNPG_DEF: "青甘宁革命根据地"
@@ -41,9 +41,9 @@ XBJ_despotism_party_long: "宁夏马家军"
 XBJ_NRA: "国民革命军西北新一师"
 XBJ_NRA_long: "国民革命军西北新编第一师"
 XBJ_socialist_party: "中共中央西北局"
-XBJ_socialist_party_long: "中国共产党中央委员会西北局"
+XBJ_socialist_party_long: "中共中央西北局"
 XBJ_communist_party: "中共中央西北局"
-XBJ_communist_party_long: "中国共产党中央委员会西北局"
+XBJ_communist_party_long: "中共中央西北局"
 
 XPC: "伊犁河谷垦荒兵团"
 XPC_DEF: "伊犁河谷垦荒兵团"
@@ -53,7 +53,7 @@ XPC_ultranationalism_party_long: "维吾尔兄弟会"
 XPC_paternalism_party: "伊犁建设兵团"
 XPC_paternalism_party_long: "伊犁建设兵团"
 XPC_communist_party: "中共中央新疆局"
-XPC_communist_party_long: "中国共产党中央委员会新疆局"
+XPC_communist_party_long: "中共中央新疆局"
 
 XNJ: "中央革命根据地"
 XNJ_DEF: "中央革命根据地"
@@ -66,13 +66,13 @@ XIN: "新疆执政府"
 XIN_DEF: "新疆执政府"
 XIN_ADJ: "新疆"
 XIN_fascism_party: "日本顾问团"
-XIN_fascism_party_long: "日本顾问团（Japanese Merchant Group）"
+XIN_fascism_party_long: "日本顾问团(Japanese Merchant Group)"
 XIN_despotism_party: "六大政策党"
 XIN_despotism_party_long: "六大政策党(SPP)"
 XIN_socialist_party: "新疆保卫和平民主同盟"
 XIN_socialist_party_long: "新疆保卫和平民主同盟"
 XIN_communist_party: "中共中央新疆局"
-XIN_communist_party_long: "中国共产党中央委员会新疆局
+XIN_communist_party_long: "中共中央新疆局"
 
 QIN_MJY: "西宁国民政府"
 QIN_MJY_DEF:"西宁国民政府"
@@ -97,21 +97,19 @@ XIK_despotism_2_party:0 "西康省政府"
 XIK_despotism_2_party_long:0 "西康省政府"
 XIK_despotism_party:0 "国民革命军"
 XIK_despotism_party_long:0 "国民革命军"
-XIK_communist_party: "中共川康特委"
-XIK_communist_party_long: "中国共产党川康特别委员会"
+XIK_communist_party: "中共中央南方局 - 川康特委"
+XIK_communist_party_long: "中共中央南方局 - 中国共产党川康特别委员会"
 
 SHX_despotism_1_party:0 "国军 - 晋绥军"
 SHX_despotism_1_party_long:0 "国民革命军 - 晋绥军"
 SHX_despotism_2_party:0 "同志会 - 铁军派"
 SHX_despotism_2_party_long:0 "民族革命同志会 - 铁军派"
-SHX_despotism_party:0 "同志会 - 基干同志"
-SHX_despotism_party_long:0 "民族革命同志会 - 基干同志"
+SHX_despotism_party:0 "同志会"
+SHX_despotism_party_long:0 "民族革命同志会"
 SHX_paternalism_party:0 "同志会 - 文人派"
 SHX_paternalism_party_long:0 "民族革命同志会 - 文人派"
-SHX_conservatism_party:0 "同志会 - 文人派"
-SHX_conservatism_party_long:0 "民族革命同志会 - 文人派"
 SHX_communist_party:0 "中共中央西北局"
-SHX_communist_party_long:0 "中国共产党中央委员会西北局"
+SHX_communist_party_long:0 "中共中央西北局"
 
 HNA: "海南军政监"
 HNA_DEF: "海南军政监"
@@ -129,7 +127,6 @@ VIC_reform_communist_party_long: "越南劳动党"
 VIC_unified_communist_party: "越南共产党"
 VIC_unified_communist_party_long: "越南共产党"
 
-#IF
 MEA: "蒙古人民共和国"
 MEA_DEF: "蒙古人民共和国"
 MEA_communist_1_party: "蒙古人民革命党"
