--- a/localisation/simp_chinese/LFB_nanking_negotiationgs_l_simp_chinese.yml
+++ b/localisation/simp_chinese/LFB_nanking_negotiationgs_l_simp_chinese.yml
@@ -57,8 +57,8 @@
  COX_union_paternalism_party_long: "中国国民党 - 太子系"
  COX_union_conservatism_party: "国民党 - 新太子系"
  COX_union_conservatism_party_long: "中国国民党 - 新太子系"
- COX_union_liberal_conservatism_party: "国家社会党"
- COX_union_liberal_conservatism_party_long: "中国国家社会党"
+ COX_union_liberal_conservatism_party: "民盟 - 国家社会党"
+ COX_union_liberal_conservatism_party_long: "民盟 - 中国国家社会党"
  COX_union_liberalism_party: "民盟"
  COX_union_liberalism_party_long: "中国民主同盟"
  COX_union_progressivism_party: "民盟 - 农工民主党"
@@ -69,6 +69,8 @@
  COX_union_communist_party_long: "中国共产党"
  YUN_despotism_civil_war_party: "国民革命军"
  YUN_despotism_civil_war_party_long: "国民革命军"
+ YUN_progressivism_civil_war_party: "中国国家社会党"
+ YUN_progressivism_civil_war_party_long: "中国国家社会党"
 
 #characters
  COX_National_Assembly: "国民大会"
@@ -232,12 +234,6 @@
  LFBUG.1002.b: "吾国之患，不在外邦，而在萧墙之内。"
  LFBUG.1002.c: "知其貌合心离，今果自相鱼肉。"
  LFBUG.1002.d: "古国再陷战火。"
- SE_superevent_cpc_kmt_civil_war:0 "第二次国共内战"
- SE_superevent_cpc_kmt_civil_war_A:0 "神州陆沉"
- SE_superevent_cpc_kmt_civil_war_D:0 "国虽大,好战必亡。\n- 司马穰苴"
- SE_superevent_LFB_GAW:0 "第二次抗日战争"
- SE_superevent_LFB_GAW_A:0 "收复失地，还我河山"
- SE_superevent_LFB_GAW_D:0 "恨不抗日死，留作今日羞。\n国破尚如此，我何惜此头！\n- 吉鸿昌"
  LFBUG.1003.t: "[Get_newspaper_header]中华人民共和国成立"
  LFBUG.1003.desc: "今日，中国大地上的枪炮声终于停息，中国共产党成为了最终赢家。\n\n在国共谈判破裂后，双方又开始了激烈的内战，中华大地饱受摧残。而就在昨天，中国共产党的主要领导人在天安门城楼之上宣布了以中国共产党为执政党的中华人民共和国的成立。\n\n在宣布新政权成立后，毛岸英等一众领导人检阅了部队，并在当天稍晚时候举办了群众庆祝游行活动。\n\n无论如何，一个自由的中国终于建立起来了。"
  LFBUG.1003.a: "艰难缔造庆成功，五星红旗遍地红。"
