--- a/localisation/simp_chinese/replace/LFB_countries_l_simp_chinese.yml
+++ b/localisation/simp_chinese/replace/LFB_countries_l_simp_chinese.yml
@@ -77,10 +77,10 @@ XIN_communist_party_long: "中共中央新疆局"
 QIN_MJY: "西宁国民政府"
 QIN_MJY_DEF:"西宁国民政府"
 QIN_MJY_ADJ:"西北"
-QIN_despotism_1_party:0 "宁夏马家军"
-QIN_despotism_1_party_long:0 "宁夏马家军"
-QIN_despotism_party:0 "青海马家军"
-QIN_despotism_party_long:0 "青海马家军"
+QIN_despotism_1_party:0 "国民革命军 - 宁夏马家军"
+QIN_despotism_1_party_long:0 "国民革命军 - 宁夏马家军"
+QIN_despotism_party:0 "国民革命军 - 青海马家军"
+QIN_despotism_party_long:0 "国民革命军 - 青海马家军"
 QIN_despotism_3_party:0 "国民革命军 - 中央军"
 QIN_despotism_3_party_long:0 "国民革命军 - 中央军"
 QIN_despotism_4_party:0 "国民党 - CC系"
@@ -98,7 +98,7 @@ XIK_despotism_2_party_long:0 "西康省政府"
 XIK_despotism_party:0 "国民革命军"
 XIK_despotism_party_long:0 "国民革命军"
 XIK_communist_party: "中共中央南方局 - 川康特委"
-XIK_communist_party_long: "中共中央南方局 - 中国共产党川康特别委员会"
+XIK_communist_party_long: "中共中央南方局 - 中共川康特别委员会"
 
 SHX_despotism_1_party:0 "国军 - 晋绥军"
 SHX_despotism_1_party_long:0 "国民革命军 - 晋绥军"
@@ -114,11 +114,12 @@ SHX_communist_party_long:0 "中共中央西北局"
 HNA: "海南军政监"
 HNA_DEF: "海南军政监"
 HNA_ADJ: "海南"
-HNA_Fukuda_Ryouzou: "福田良三"
 HNA_ultranationalism_party: "华南方面军"
 HNA_despotism_party: "帝国海南军政部"
 HNA_liberalism_party: "中国民主同盟"
-HNA_communist_party: "琼崖讨逆纵队"
+HNA_communist_party: "中共琼崖特委"
+HNA_communist_party_long: "中共琼崖特别委员会"
+HNA_Fukuda_Ryouzou: "福田良三"
 
 VIC_communist_party: "东洋共产党"
 VIC_communist_party_long: "东洋共产党"
@@ -134,9 +135,22 @@ MEA_communist_1_party_long: "蒙古人民革命党"
 MEA_communist_party: "蒙古人民革命党"
 MEA_communist_party_long: "蒙古人民革命党"
 
+DMN: "西满洲缓冲区"
+DMN_ADJ: "西满洲缓冲区"
+DMN_DEF: "西满洲缓冲区"
+DMN_fascism_party: "满洲国各地残余机构"
+DMN_fascism_party_long: "满洲国各地残余机构"
+DMN_paternalism_party: "满洲重建委员会"
+DMN_paternalism_party_long: "满洲重建委员会"
+DMN_communist_party: "中共中央东北局"
+DMN_communist_party_long: "中共中央东北局"
+DMN_pujie: "爱新觉罗·溥杰"
+
 KOR_LFB_IF: "朝鲜"
 KOR_LFB_IF_DEF: "朝鲜"
 KOR_LFB_IF_ADJ: "朝鲜"
+KOR_rebuild_communist_party: "朝鲜共产党"
+KOR_rebuild_communist_party_long: "朝鲜共产党"
 
 Construction_Corps:0 "建设兵团"
 pup_difangju:0 "地方局"
