--- a/localisation/simp_chinese/replace/LFB_states_lore_l_simp_chinese .yml
+++ b/localisation/simp_chinese/replace/LFB_states_lore_l_simp_chinese .yml
@@ -1,7 +1,7 @@
 ﻿l_simp_chinese:
  state_lore_initials.380: " WUW "
  state_lore_name.380: "武威"
- state_lore_desc.380: "千年古城武威，其历史可谓波澜壮阔。忆往昔，城市尚名凉州之时，乃是抵御匈奴的关隘要地，亦是丝绸之路的关键节点。时过境迁，西汉的奔马、西夏的石碑，无不诉说着这座藏于盛唐荣光之下的城市往日的辉煌。\n\n今日之武威，地位与活力丝毫不减。兰州沦陷后，该地就成为了宁夏马家军的核心。随着移民大量涌入，城市正渐渐回归丝绸之路时期的繁华。"
+ state_lore_desc.380: "千年古城武威，其历史可谓波澜壮阔。忆往昔，城市尚名凉州之时，乃是抵御匈奴的关隘要地，亦是丝绸之路的关键节点。时过境迁，西汉的奔马、西夏的石碑，无不诉说着这座藏于盛唐荣光之下的城市往日的辉煌。\n\n今日之武威，地位与活力丝毫不减。自马家军庇护西北国民党之事败露，兰州在冲突中沦陷后，该地就成为了流亡的西北国民党的核心。随着移民大量涌入，城市正渐渐回归丝绸之路时期的繁华。"
  state_lore_initials.382: " XIN "
  state_lore_name.382: "西宁"
  state_lore_desc.382: "§z河源飞鸟外，雪岭大荒西。\n汉垒今犹在，遥知路不迷。\n——《送杨中丞和蕃》§!  \n西宁、西宁，西境安宁。然而，尽管这座城市像华夏大地上的众多城市一样被赋予了寓意美好的名字，这种嘱托却似乎从未奏过效。1872年，马占鳌大败不可一世的湘军后率回民乱军降清，自此，青海周边叱咤风云的马家民团横行霸道，不再安宁的西北群山被血腥的气氛所笼罩，人民惶惶不可终日。\n\n50年代的腾飞带给西宁的一切事物中，不真实的声响远大于触手可及之物。一小批与当地军阀势力沾亲带故的暴发户背后，挨了几千年饿是平民仍早出晚归、食不果腹，他们早就看淡了与己无关的虚妄颂歌，准备好像自己的父辈与祖辈那样，迎接必然到来的那如流沙般冷酷无情的崩塌。疯狂的60年代，人人都在裸奔，而那些平民像接受“盛世”一般坦然地接受了西北的又一次萧条，饥肠辘辘而一无所求地躺在破旧的民房中，麻木地等待着因各种突发疾病魂归天国的时刻，抑或等待着被几个马家军的士兵粗暴地拖走，领上一把配不上几发子弹的土制步枪和一套破损不堪甚至沾着血污的旧军装，直到某一天，子弹无情地穿过粗糙的胸膛，自己若即若离的体温同躯壳一同倒下，向养育了自己一生的西北旷野致以最后的僵硬的拥抱。"
@@ -10,7 +10,7 @@ state_lore_name.601: "玉树"
 state_lore_desc.601: "§f不带利刃的武器，\n鞘柄虽好也难破敌。\n——《格萨尔王传》§! \n在长江与黄河尚为涓涓细流、离源头不远的澜沧江仍波平浪静的高岭之中，端然正坐着玉树市。尽管无数个世纪来与喧闹的外界看似相隔甚远，但玉树——“遗迹之城”——并没有完全地置身于硝烟与战火外。从难以考证的吐蕃时代到蒙古征服，再到清末民初的动荡，玉树被各路人马反复争夺。\n\n藏军觊觎玉树已久，当1955年，渴盼玉树已久的藏军终于与青海当地土司协同向这座城市发起进攻之时，藏人的激动之情溢于言表。然而，雪山上操着转经轮的僧民终是敌不过马家军，在早已支离破碎的华夏的西方边陲爆发的这场惨绝人寰的高原巷战以血红的通天河告终。被鲜血洗礼淬炼的青天白日在玉树的寒风中屹立不倒，而落荒而逃的藏军再无染指此地的胆量——除非他们想同先前那些兴高采烈迎接死亡的士兵一样，暴尸于可可西里的荒野、由冻原的狼为他们举行天葬。"
 state_lore_initials.602: "CHD"
 state_lore_name.602: "昌都"
-state_lore_desc.602: "如果说汉地的徐州是京沪的门户，那么康区的昌都就是拉萨的门户。昌都，藏语意为“水流汇合处”。 在昌都的辖区内，分布着四条大河和大大小小数不尽的湖泊。作为西藏康区的中心城市，它是渡过金沙江之后进入拉萨地区的必经之路，无论是大军还是商人都要先经过昌都才能到达拉萨，因此有治藏先安康的说法，历来是兵家必争之地。\n\n昌都的主要居民是康巴藏人，相比于卫藏地区（拉萨地区），康巴与汉地的关系更为深厚。虽然对于汉地的军队来说，这里的文化风俗、自然环境都与汉地有天壤之别，然而昌都的驻军可以轻易凭借着有利的地形和坚壁清野阻拦数倍于己的敌军。1953年，东进的藏军一路势如破竹，却在昌都城下折戟沉沙，再未能前进一步。"
+state_lore_desc.602: "如果说汉地的徐州是京沪的门户，那么康区的昌都就是拉萨的门户。昌都，藏语意为“水流汇合处”。 在昌都的辖区内，分布着四条大河和大大小小数不尽的湖泊。作为西藏康区的中心城市，它是渡过金沙江之后进入拉萨地区的必经之路，无论是大军还是商人都要先经过昌都才能到达拉萨，因此有治藏先安康的说法，历来是兵家必争之地。\n\n昌都的主要居民是康巴藏人，相比于卫藏地区（拉萨地区），康巴与汉地的关系更为深厚。然而这并不意味着昌都是个易攻难守之地，对于汉地的军队来说，这里的文化风俗、自然环境，都与汉地有天壤之别。昌都的藏军可以轻易凭借着有利的地形和坚壁清野阻拦数倍于己的敌军。而可怕的高原反应能让一个英勇的平原士兵在极短的时间内变成心脏病患者。\n\n藏人与敌人最近的一次作战是在1953年，一支溃退的国民革命军与驻守在昌都的藏军发生冲突。这支国民革命军在士气低落、装备缺少、指挥混乱的情况下，被藏军伏击，进而失败。自此，西康的汉人士兵再也不敢渡过金沙江。"
 state_lore_initials.603: "LAN"
 state_lore_name.603: "兰州"
 state_lore_desc.603: "§W大雪锁金城，残阳栖南山。\n滔滔黄河东去，沧桑越千年。\n——《水调歌头·白塔山》§! \n欢迎来到兰州：“丝绸之路”的起点，陇西历代兵家必争之地，马家军的龙兴之城，当今中国西北大地上最耀眼的明珠！当然，除了那些留着大胡子满口粗话的马家军军官们，最后那个称呼现在已经没有人在用了。\n\n在一切皆有可能的50年代，陇西的大小山窑间流传着一个公认的事实：姑娘要嫁就嫁兰州的后生，兰州的小伙子个个听广东进口的索尼牌收音机！一辈子在群山中繁衍生息的山民们惊奇地看着日资企业的小楼在古老的城区拔地而起，一架架“铁鸟”随着日出飞来，降落在崭新的飞机场上，把黄土变成滚滚黄金。但短短十年就足以抹平一切的一切，象征着真金白银的“株式会社”大牌子在年久失修的日资小楼上颓圮，机场的跑道上长满了低矮的麻黄草与沙枣花。东京与南京的航线仍旧日夜轮转，而正如十年前被意气焕发的兰州小伙所鄙夷的山窑姑娘一般，被遗弃的兰州梦醒了，破败而倾颓的她静静地伫立在沙漠边陲，与富士山的各色游客、波尔多的品酒师、旧金山的摩登青年们共同仰望着北纬36度冷寂的星空。"
