修改部分本地化

--- a/localisation/simp_chinese/replace/LFB_character_l_simp_chinese.yml
+++ b/localisation/simp_chinese/replace/LFB_character_l_simp_chinese.yml
@@ -1,5 +1,4 @@
 ﻿l_simp_chinese:
-
 #新疆
   Mao_Anying: "毛岸英"
   COX_Mao_Anying_desc: "毛岸英不仅是中国革命领袖的长子，也是革命的孩子。自出生以来，他就随着父母为了革命事业四处奔波，在8岁时，他的母亲被捕入狱，不久后就牺牲了，他和自己的兄弟被地下党接到上海生活。但上海的地下党组织不久后就被破坏，他们只能流落街头。在这段时间，他当帮工，捡破烂，送报纸，推人力车，虽然环境残酷，但他革命的热情从未被磨灭，反到在旧社会的残酷不断锤炼下愈发坚韧了。\n\n1936年，他前往苏联学习，就在一年后，日军大举侵华，抗日战争爆发。他不知道的是，不久以后，自己就将成为革命的独子。卫国战争爆发后，他自愿进入军校学习，抗击法西斯侵略者，然而战争的发展出乎了所有人的意料，苏维埃联盟就这样被击败了，与国内的联络也随之切断。报纸上有关中国的战况变幻莫测，而越来越多溃退进入远东地区的中国溃军带来了越来越精确的消息——自己的父亲失败了。最后，一位老共产党员给他带来了一封信件，信上潦草的字似乎出自父亲的手笔——“游子莫念还乡。”\n\n牢记父亲的教诲，毛岸英一直没有回到故乡。在从军校毕业后，他为西俄罗斯革命阵线而服役，在经历了西俄战争苦涩的失败与不愉快的政治斗争后，他终于决心离开，向东而去。在旅程的重点——贝加尔湖畔——他的身边逐渐汇集起了一支由中国人组成的军团，这些人有的自十月革命以来就为苏维埃服务，有的是东北抗日联军的溃军，还有些是勉强撤离沦陷区的老工农红军。\n\n随着时间的推移，韶山的青山绿水，上海的外滩窄巷，东北的沃野，黄土的高原从清晰的回忆变为了模糊的映像，故乡的图景模糊了，思乡之情却历久弥新。西伯利亚的季风每年都向南方刮去，离家已久的游子也越发思念故乡。而故乡的山水已经被侵略者占领，故乡的人民正被他们当作牛马使唤。作为中国革命的独子，不能再坐视不管了。"
@@ -40,11 +39,10 @@
   COX_Chang_Qiankun: "常乾坤"
 
 #西北局
-  #Liu_Shaoqi
   XBJ_Liu_Shaoqi_desc: "在最低谷处为革命找寻生机，在最绝望的时候为全民族觅得希望，这便是刘少奇坚持至今的，属于共产党人的“党性”。他将自己的青春献给了大革命，将热血挥洒在抗日的战场，而他憔悴的晚年，则为了党的存续穷尽了一切——当战败已经注定之时，党不得不放弃了延安根据地，展开了前往西南的新长征，刘少奇自愿留在延安，维系共产党残破的地下党组织。\n\n陕北的斗争一日比一日艰苦，日军扫荡的压力与日俱增，他们的身前匍匐着汉奸党羽，他们手中拎着禁锢群众的锁链，党越来越无法在陕北辗转腾挪……在最危险的几个年份，党被分割包围在黄河两岸。为了保存火种，刘少奇只能率领残破的党向西北撤退……\n\n共产党的西行相当顺利，在顺利通过了山西与青海的军阀控制区之后，刘少奇幸运地在新疆找到了党组织。尽管盛世才政府愿意给共产党提供一席之地，但刘少奇很清楚军阀们首鼠两端的做派，所以当不可避免的背叛到来时，共产党已经做足了准备，最大程度地减少了损失。\n\n刘少奇经历过党最黑暗的时光，竭尽全力地拯救了危难中的党，这在他性格中留下了不可磨灭的印记。比起积极地发动群众，他更相信缜密的谋划与情报的运用，尽管采用更加实用主义的立场，但没有人能怀疑他对革命的忠诚。"
   Peng_Dehuai: "彭德怀"
   Ma_Dunjing: "马惇靖"
-  XBJ_Jiang_Jingguo: "蒋经国  "
+  XBJ_Jiang_Jingguo: "蒋经国"
   XBJ_Ma_Dunjing_hog_desc: "§Y政府首脑§!\n§Y军阀§!\n------------\n§L做派首鼠两端，立场摇摆不定——任何在乱世中割据一方的军阀都不约而同地总结出了这相同的生存哲学。得益于此，军阀们在某种程度上建立了形形色色的，还算稳定的政权。\n半个世纪悄然逝去，中华大地乱局如故，所以正如世界上的其他政权一样，他们也需要合格的接班人。军阀们通常会将自己相中的直系后代或家族中有前途的年轻人们早早地安插在部队中，给他们“参谋”，“师长”之类的职务，教导着这些人军阀的生存之道。\n马惇靖，便是这些年轻人中的佼佼者。\n他自幼熟读诗书，从小便懂得阿拉伯文，能根据大人的意思解经。在他父亲马鸿宾的部队中。他步步高升，从营职升到了团，旅，师……不到30岁，他就当上了81军的参谋长。在旁人看来，他不过是凭着父亲的权柄扶摇直上——虽然马惇靖屡次与众人争辩，但他的父亲却不避讳这一点——西北的冲突本就不似中原般激烈，在父亲的计划中，自己的儿子们将在剿匪与小规模冲突中积累功勋与经验，等到成熟之时，他就可以光荣卸任，把防务交予值得信赖的儿子们……\n但事与愿违，日本帝国对中国的全面入侵击碎了无数军阀可悲的地区主义幻想，无数年轻人被抗日的热情所感召，而敏锐的军阀们则从统一战线的建立中嗅到了剧变降临的前兆。尽管心中所想并不相同，但马惇靖和马鸿宾——这对父子仍一道踏上了抗日的战场。\n在绥西的残酷战争中，马惇靖目睹了无数敌寇的暴行，也深受无数壮烈牺牲的晋绥人民的感召。战火令他迅速成长为一名经验丰富的将领，一位高唱爱国歌曲的领袖，却越发偏离一个合格军阀的道路。他的心中早已充满了全国人民同仇敌忾的气魄，中华民族应当生死与共，“偏安一隅以求自保”从来不是一个现实的选项。\n当时的他不会料想得到，即便汇聚了全民族的力量也无法确保战争的胜利。他更想不到的是，有朝一日，战火也会烧到自己的故乡。如今西北的人民每时每刻都承受着与当日绥西相比有过之而无不及的暴行。为了自己亲爱的故乡，马惇靖愿意献出一切，以求早日将日寇驱逐。§!"
   COX_Ma_Dunjing_sec_desc: "§Y安全部长§!\n§Y军阀§!\n------------\n§L做派首鼠两端，立场摇摆不定——任何在乱世中割据一方的军阀都不约而同地总结出了这相同的生存哲学。得益于此，军阀们在某种程度上建立了形形色色的，还算稳定的政权。\n半个世纪悄然逝去，中华大地乱局如故，所以正如世界上的其他政权一样，他们也需要合格的接班人。军阀们通常会将自己相中的直系后代或家族中有前途的年轻人们早早地安插在部队中，给他们“参谋”，“师长”之类的职务，教导着这些人军阀的生存之道。\n马惇靖，便是这些年轻人中的佼佼者。\n他自幼熟读诗书，从小便懂得阿拉伯文，能根据大人的意思解经。在他父亲马鸿宾的部队中。他步步高升，从营职升到了团，旅，师……不到30岁，他就当上了81军的参谋长。在旁人看来，他不过是凭着父亲的权柄扶摇直上——虽然马惇靖屡次与众人争辩，但他的父亲却不避讳这一点——西北的冲突本就不似中原般激烈，在父亲的计划中，自己的儿子们将在剿匪与小规模冲突中积累功勋与经验，等到成熟之时，他就可以光荣卸任，把防务交予值得信赖的儿子们……\n但事与愿违，日本帝国对中国的全面入侵击碎了无数军阀可悲的地区主义幻想，无数年轻人被抗日的热情所感召，而敏锐的军阀们则从统一战线的建立中嗅到了剧变降临的前兆。尽管心中所想并不相同，但马惇靖和马鸿宾——这对父子仍一道踏上了抗日的战场。\n在绥西的残酷战争中，马惇靖目睹了无数敌寇的暴行，也深受无数壮烈牺牲的晋绥人民的感召。战火令他迅速成长为一名经验丰富的将领，一位高唱爱国歌曲的领袖，却越发偏离一个合格军阀的道路。他的心中早已充满了全国人民同仇敌忾的气魄，中华民族应当生死与共，“偏安一隅以求自保”从来不是一个现实的选项。\n当时的他不会料想得到，即便汇聚了全民族的力量也无法确保战争的胜利。他更想不到的是，有朝一日，战火也会烧到自己的故乡。如今西北的人民每时每刻都承受着与当日绥西相比有过之而无不及的暴行。为了自己亲爱的故乡，马惇靖愿意献出一切，以求早日将日寇驱逐。§!"
   Bo_Yibo: "薄一波"
@@ -71,7 +69,6 @@
 #马家军
 #QIN_Ma_Bufang: "马步芳"//勿念他归
 #POLITICS_MA_BUFANG_DESC: "有人说，西北马家共尊真主，故得长幼和睦，尊卑有序；西北人民唯奉安拉，故得战乱鲜少，生活富足。但此刻坐在王座上的马步芳十分清楚，抛去真主圣言的粉饰，西北诸军阀的本质与中原并无不同，都是披着人皮的野兽。\n出卖国家，背叛人民，甚至背叛自己的至亲——就连马步芳自己，都伙同南京政府，与马步荣一道逼迫其父马麟将权柄交出，才得以执掌青海。但马家确实胜于中原军阀的一点是——每当大敌当前，信众们便会爆发出惊人的团结，无论分歧几何，他们也大体上服从领导者的决定，自清末以来便一贯于此。\n无论面对的是共产党还是国民党，是汉人还是日寇，马步芳都小心地把控着西北的航向。觉察日军不愿劳师远征青海，马步芳便明智地保存实力，将重庆的电报每每搁置一旁。待到战局明朗之际，他果断改换阵营，令西北赶上了战后经济复苏的快车，开创了“塞上江南”的繁荣神话。\n时过境迁，但马步芳的统治仍稳如泰山，放眼四方，日资仍争抢着涌入，而南京政府也无力对西北自治做出干涉。就连西藏的喇嘛，也自觉避开马家军的锋芒。但伟大的“西北王”如今已步入其暮年，多年来放荡奢靡的生活拖垮了他的身子，好在曾环绕膝下的孩子们已经长成，终有一日，他们必将从自己手中接过这雄厚的遗产，无论早晚…无论用什么手段……"
- QIN_Ma_Ji_yuan: "马继援 "
 POLITICS_MA_JIYUAN_LFB_DESC: "一座座窑洞被翻了个底朝天，战士连同平民的尸体一同散落在不知名的山岗之中；孩子的脸冻结在面目狰狞的最后一刻，哭喊的声音同毒气一同弥散直至消失；制服残破不全的溃兵赤脚拖着血迹四散奔逃。然后，就在这些早已被他习惯的声音与画面之中，一发子弹径直穿透了父亲的头颅，那副似乎永远都不会慌乱的面庞顷刻面目全非……\n\n然后，马继援又一次惊醒了。\n\n马继援时常思忖这一切是否是造物者的报应，但每每想到这里，他又会为这种想法的残酷深深感到不寒而栗。三十年前，他的父亲马步芳是如何无动于衷地注视着那些被自己麾下刺刀挑开的胸膛？而今，数倍残忍于马家军当年所作的恶正平等地降临在这片黄沙上阿丹所有的儿女身上。从当年的说一不二到如今的颠沛流离，似乎胜利在这片土地上只会眷顾与芸芸众生为敌的那一方。\n\n于是，德国和广东最新式的机械同西北的风沙一同作响起来了；于是，战士们的步枪与刺刀在一次次更新换代中越发锃亮了；于是，在对南京、北平或是日耳曼尼亚的蹒跚的模仿中，一栋栋楼房在时不时点缀几道航迹云的蓝天中立起来了。\n\n但是这一切永远不会结束。父亲逐寸褪淡的面容和机枪中无数人的最后一声哭喊永远不会离开马继援的梦境，因为他知道，在他所不能及的地方，永远都有自己的同胞正在魔鬼的爪牙枪下失掉自己的父亲，永远都有战士不自量力为着崇高的信念迎接那没有悬念的结局，像狗一般没有尊严地倒在机枪的火舌下。\n\n但他知道，终有一日，这场延续了三十年有余的暗无天日的噩梦会迎来光明普照的结局。\n\n§R 终有一日。§!"
  QIN_Chen_Cheng: "陈诚"
  POLITICS_CHEN_CHENG_DESC:0 ""
@@ -103,6 +100,9 @@ XIK_jbw:0 "腐化将军"
  SHX_Liang_Dunhou: "梁敦厚"
  SHX_Gao_Gang: "高岗"
 
+#海南
+HNA_Fukuda_Ryouzou: "福田良三"
+
  #蒙人阵
 MEA_Zolbingijn_Shizhee: "卓勒宾·希耶"
 POLITICS_Zolbingijn_Shizhee_DESC: "（占位）蒙古覆灭后从苏联归国参加游击运动的原农村派（左派）成员。"
@@ -116,3 +116,6 @@ MEA_Zhamyangijn_Lkhagvasuren: "扎米扬·勒哈格瓦苏伦"
 MEA_Zhamyangijn_Lkhagvasuren_sec_desc: "§Y国防部长§!\n§Y民族共产主义§!\n------------\n扎米扬·勒哈格瓦苏伦于1912年出生于一个军官家庭，1932年，二十岁的勒哈格瓦苏伦应征入伍，随后被分配到第十五骑兵师。1935年，勒哈格瓦苏伦被选中参加优秀军官培养计划，随后他的晋升速度可以用“坐火箭”来形容。1939年7月，勒哈格瓦苏伦以第一苏蒙集团军的蒙古骑兵部分的指挥官的身份，参加了诺门罕战役，而他的顶头上司则是朱可夫。 \n\n在诺门罕战役中，勒哈格瓦苏伦首次见到了机械化骑兵集群的威力，并且暗暗下定决心，要为蒙古打造自己的机械化骑兵部队。但苏联和中国的战败，让勒哈格瓦苏伦不得不收起他的梦想，转而逃命。不过，如果有一天蒙古被解放，或许勒哈格瓦苏伦还有机会实现他的梦想。"
 MEA_Shagdarijn_Gungaar: "沙格达里·贡嘎尔"
 MEA_Yumzhaagijn_Tsedenbal: "尤睦佳·泽登巴尔"
+
+#满洲
+DMN_pujie: "爱新觉罗·溥杰"
