--- a/localisation/simp_chinese/replace/LFB_countries_l_simp_chinese.yml
+++ b/localisation/simp_chinese/replace/LFB_countries_l_simp_chinese.yml
@@ -68,7 +68,7 @@ XIN_ADJ: "新疆"
 XIN_fascism_party: "日本顾问团"
 XIN_fascism_party_long: "日本顾问团(Japanese Merchant Group)"
 XIN_despotism_party: "六大政策党"
-XIN_despotism_party_long: "六大政策党(SPP)"
+XIN_despotism_party_long: "六大政策党"
 XIN_socialist_party: "新疆保卫和平民主同盟"
 XIN_socialist_party_long: "新疆保卫和平民主同盟"
 XIN_communist_party: "中共中央新疆局"
@@ -100,8 +100,8 @@ XIK_despotism_party_long:0 "国民革命军"
 XIK_communist_party: "中共中央南方局 - 川康特委"
 XIK_communist_party_long: "中共中央南方局 - 中共川康特别委员会"
 
-SHX_despotism_1_party:0 "国军 - 晋绥军"
-SHX_despotism_1_party_long:0 "国民革命军 - 晋绥军"
+SHX_despotism_1_party:0 "中华民国国军 - 晋绥军"
+SHX_despotism_1_party_long:0 "中华民国国军 - 晋绥军"
 SHX_despotism_2_party:0 "同志会 - 铁军派"
 SHX_despotism_2_party_long:0 "民族革命同志会 - 铁军派"
 SHX_despotism_party:0 "同志会"
@@ -115,11 +115,13 @@ HNA: "海南军政监"
 HNA_DEF: "海南军政监"
 HNA_ADJ: "海南"
 HNA_ultranationalism_party: "华南方面军"
-HNA_despotism_party: "帝国海南军政部"
+HNA_ultranationalism_party_long: "华南方面军"
+HNA_despotism_party: "海南军政监"
+HNA_despotism_party_long: "海南军政监"
 HNA_liberalism_party: "中国民主同盟"
+HNA_liberalism_party_long: "中国民主同盟"
 HNA_communist_party: "中共琼崖特委"
 HNA_communist_party_long: "中共琼崖特别委员会"
-HNA_Fukuda_Ryouzou: "福田良三"
 
 VIC_communist_party: "东洋共产党"
 VIC_communist_party_long: "东洋共产党"
@@ -144,7 +146,6 @@ DMN_paternalism_party: "满洲重建委员会"
 DMN_paternalism_party_long: "满洲重建委员会"
 DMN_communist_party: "中共中央东北局"
 DMN_communist_party_long: "中共中央东北局"
-DMN_pujie: "爱新觉罗·溥杰"
 
 KOR_LFB_IF: "朝鲜"
 KOR_LFB_IF_DEF: "朝鲜"
