--- a/localisation/simp_chinese/replace/LFB_replace_l_simp_chinese.yml
+++ b/localisation/simp_chinese/replace/LFB_replace_l_simp_chinese.yml
@@ -10,13 +10,14 @@
  tno_current_version_date:  "2025/x/x TNO-Light from Lake Baikal v0.3 故土新花"
 
  ##战争名称（替换）
- WAR_NAME_JAP_YUN: "抗日战争 - 南方战线"
- WAR_NAME_YUN_JAP: "抗日战争 - 南方战线"
+ WAR_NAME_JAP_YUN: "第二次抗日战争 - 南方战线"
+ WAR_NAME_YUN_JAP: "第二次抗日战争 - 南方战线"
 
  ##结束界面tt
  TNO_CountryClosing_select_btn_credits_tt: "[Get_TNO_CountryClosing_select_btn_credits_tt]"
  TNO_CountryClosing_left_title: "[GET_TNO_CountryClosing_left_title]"
 
+ ##阵营idea
  NLF_Leader: "[Get_NLF_Leader_name]"
  NLF_Leader_desc: "[Get_NLF_Leader_desc]"
 
