--- a/localisation/simp_chinese/replace/LFB_states_lore_l_simp_chinese .yml
+++ b/localisation/simp_chinese/replace/LFB_states_lore_l_simp_chinese .yml
@@ -1,8 +1,8 @@
 ﻿l_simp_chinese:
- state_lore_initials.380: " WUW "
+ state_lore_initials.380: "WUW"
  state_lore_name.380: "武威"
- state_lore_desc.380: "千年古城武威，其历史可谓波澜壮阔。忆往昔，城市尚名凉州之时，乃是抵御匈奴的关隘要地，亦是丝绸之路的关键节点。时过境迁，西汉的奔马、西夏的石碑，无不诉说着这座藏于盛唐荣光之下的城市往日的辉煌。\n\n今日之武威，地位与活力丝毫不减。自马家军庇护西北国民党之事败露，兰州在冲突中沦陷后，该地就成为了流亡的西北国民党的核心。随着移民大量涌入，城市正渐渐回归丝绸之路时期的繁华。"
- state_lore_initials.382: " XIN "
+ state_lore_desc.380: "千年古城武威，其历史可谓波澜壮阔。忆往昔，城市尚名凉州之时，乃是抵御匈奴的关隘要地，亦是丝绸之路的关键节点。时过境迁，西汉的奔马、西夏的石碑，无不诉说着这座藏于盛唐荣光之下的城市往日的辉煌。\n\n今日之武威，地位与活力丝毫不减。自银川沦陷后，该地就成为了宁夏马家军新的核心。随着移民大量涌入，城市正渐渐回归丝绸之路时期的繁华。"
+ state_lore_initials.382: "XIN"
  state_lore_name.382: "西宁"
  state_lore_desc.382: "§z河源飞鸟外，雪岭大荒西。\n汉垒今犹在，遥知路不迷。\n——《送杨中丞和蕃》§!  \n西宁、西宁，西境安宁。然而，尽管这座城市像华夏大地上的众多城市一样被赋予了寓意美好的名字，这种嘱托却似乎从未奏过效。1872年，马占鳌大败不可一世的湘军后率回民乱军降清，自此，青海周边叱咤风云的马家民团横行霸道，不再安宁的西北群山被血腥的气氛所笼罩，人民惶惶不可终日。\n\n50年代的腾飞带给西宁的一切事物中，不真实的声响远大于触手可及之物。一小批与当地军阀势力沾亲带故的暴发户背后，挨了几千年饿是平民仍早出晚归、食不果腹，他们早就看淡了与己无关的虚妄颂歌，准备好像自己的父辈与祖辈那样，迎接必然到来的那如流沙般冷酷无情的崩塌。疯狂的60年代，人人都在裸奔，而那些平民像接受“盛世”一般坦然地接受了西北的又一次萧条，饥肠辘辘而一无所求地躺在破旧的民房中，麻木地等待着因各种突发疾病魂归天国的时刻，抑或等待着被几个马家军的士兵粗暴地拖走，领上一把配不上几发子弹的土制步枪和一套破损不堪甚至沾着血污的旧军装，直到某一天，子弹无情地穿过粗糙的胸膛，自己若即若离的体温同躯壳一同倒下，向养育了自己一生的西北旷野致以最后的僵硬的拥抱。"
 state_lore_initials.601: "YSH"
