--- a/localisation/simp_chinese/LFB_events_l_simp_chinese.yml
+++ b/localisation/simp_chinese/LFB_events_l_simp_chinese.yml
@@ -667,3 +667,8 @@
  XBJ.28.t:0 "\n\n£newspaper_header_XBJ\n\n\n\n兰州暴动"
  XBJ.28.d:0 "据日军华北军司令部情报，一支来路不明的部队已突破了外围防线，正向兰州进发。有不明消息称，这支部队正是二十多年前消失在中国大地上的共产党军队。\n\n继1960年以来日本帝国在中国西北进行的军事行动之后，这将是日本军队与中国方面进行的第二次军事冲突。华北日军司令部虽未发表任何评价。\n\n但可以预见的是：在南方已经陷入西南军阀大规模叛乱的泥潭时，甘肃一旦失陷，华北地区将彻底门户大开，这将对华北日军造成极大的战略被动。"
  XBJ.28.a:0 "这是否意味着日本的影响力正在衰退？"
+
+#哈萨克
+ KAZ.2021.t: "来自中国同志的一封信"
+ KAZ.2021.d:0 "列柳申科决定立马跑路赛里斯，要不然等哈萨克打起来内战自己就跑不了了。"
+ KAZ.2021.a:0 "那么，启程吧！"
